--- a/.gitignore
+++ b/.gitignore
@@ -768,3 +768,4 @@ Temporary Items
 # End of https://www.gitignore.io/api/linux,macos,joomla,phpstorm+iml,phpstorm+all,intellij+all
 
 /backend_plugin/system/vendor/
+/local/joomla/tmp/smartpokex/vendors/
